# ansible-collections-fishos-config

./: .ansible-lint  .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .yamllint  CHANGELOG.rst  README.md  galaxy.yml  pyproject.toml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: ansible11.yml  poetry.yml
plugins/action/: config_template.py
plugins/filter/: argsenvfmt.py  commentif.py  duration_go.py  nested_dict2items.py  oncalendar_dur.py  whitespacefix.py
plugins/modules/: config_template.py  systemd_override.py  systemd_sysusers.py  systemd_tmpfiles.py
tests/: conftest.py
tests/unit/: test_config_template.py  test_nested_dict2items.py  test_oncalendar_dur.py
