[project]
name = "ansible-collections-fishos-config"
version = "2.0.1"
description = "A collection with modified config_template and other helpers we commonly use."
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Operating System :: Linux",
    "Operating System :: Linux :: CentOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[[project.authors]]
name = "Sardina Systems"
email = "info@sardinasystems.com"

[project.urls]
Homepage = "https://sardinasystems.com"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ansible-collections-fishos-config"
version = "2.0.1"
description = "A collection with modified config_template and other helpers we commonly use."
authors = ["Sardina Systems <info@sardinasystems.com>"]
license = "Apache-2.0"
homepage = "https://sardinasystems.com"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Operating System :: Linux",
    "Operating System :: Linux :: CentOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
"ruamel.yaml" = "*"
tomlkit = "*"
# iniparse = "*"  # we need line_number which is post 0.5
iniparse = { git = "https://github.com/candlepin/python-iniparse.git", rev = "26f82c4" }
hjson = "^3"
durationpy = "*"
oncalendar = "^1"
jsonpatch = "^1"

[tool.poetry.group.dev.dependencies]
ansible = "^10"
# ansible-lint = { git = "https://github.com/ansible-community/ansible-lint.git", markers = "platform_system != 'Windows'" }
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }
mypy = "*"
lxml = "*"
pytest = "*"
pytest-cov = "*"
yamllint = "*"
bump2version = "*"
types-PyYAML = "*"
ansible-lint-junit = "*"
yamllint-junit = "*"
antsibull-changelog = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-ansible = "*"
